# dxtpl

./: Cargo.toml  README.md  rust-toolchain.toml
api/: Cargo.toml
api/src/: lib.rs
backend/: Cargo.toml
backend/src/: lib.rs  prelude.rs  session.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  prelude.rs
mobile/: Cargo.toml
mobile/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml
web/src/: main.rs
